Update Nambah link doang sebiji.

--- a/TugasKedua/Chris/index.html
+++ b/TugasKedua/Chris/index.html
@@ -47,8 +47,16 @@
                             </blockquote>
                         </p>
                         <hr/>
-                        <p><i class="icon-at"></i> chris@example.com</p>
-                        <p><i class="icon-github-2"></i> github.com/onlyongunz</p>
+                        <p>
+                            <a href="mailto:chris@example.com" class="fg-gray">
+                                <i class="icon-at"></i> chris@example.com
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://github.com/onlyongunz" class="fg-gray">
+                                <i class="icon-github-2"></i> github.com/onlyongunz
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
